# HEX-data-processor

./: .created  README.md  todo.md
HEX-data-processor/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config_example.json  config_schema.json  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration.py
HEX-data-processor/.github/workflows/: ci.yml
HEX-data-processor/docs/: architecture.md  usage.md
HEX-data-processor/scripts/: banner.txt  run.sh  setup.sh
HEX-data-processor/src/: __init__.py  cleaner.py  cli.py  config.py  http_client.py  logger.py  main.py  metrics.py  notifier.py  scheduler.py  scraper.py  transformer.py  utils.py
HEX-data-processor/src/api/: __init__.py  app.py
HEX-data-processor/src/storage/: __init__.py  base.py  csv_storage.py  jsonl_storage.py  sqlite_storage.py
HEX-data-processor/tests/: __init__.py  conftest.py  test_cleaner.py  test_config.py  test_scraper.py  test_transformer.py
HEX-data-processor/tests/fixtures/: sample_quotes.html
outputs/: workspace_output_1762970474_8546.txt  workspace_output_1762970478_1485.txt  workspace_output_1762970484_3127.txt  workspace_output_1762970571_8459.txt
